--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
 
 
     <script src="js/config.js"></script>
-    <script src="js/api.js"></script>
+    <script src="js/tokenManager.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/login.js"></script>
+
     <script>
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
