--- a/index.html
+++ b/index.html
@@ -146,13 +146,12 @@
     </div>
 
 
-    <script src="js/config.js"></script>
-    <script src="js/tokenManager.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/login.js"></script>
-
-    <script>
+    <script type="module" src="js/config.js"></script>
+    <script type="module" src="js/tokenManager.js"></script>
+    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/api.js"></script>
+    <script type="module">
+        import { isAuthenticated, getCurrentUser, login } from './js/auth.js';
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             
@@ -170,7 +169,7 @@
             errorMsg.classList.remove('show');
 
             try {
-                const result = await Auth.login(username, password);
+                const result = await login(username, password);
 
                 spinner.classList.remove('show');
                 btn.disabled = false;
@@ -200,8 +199,8 @@
         // Check if already logged in on page load - SAFE VERSION
         console.log('[Index] Checking if already authenticated...');
         
-        if (Auth.isAuthenticated()) {
-            const user = Auth.getCurrentUser();
+        if (isAuthenticated()) {
+            const user = getCurrentUser();
             if (user) {
                 const role = user.role || 'parent';
                 console.log('[Index] Already authenticated as:', user.username || user.email, 'Role:', role);
