--- a/pages/parent.html
+++ b/pages/parent.html
@@ -797,25 +797,27 @@
                 </form>
             </div>
 
-    <script src="../js/config.js"></script>
-    <script src="../js/api.js"></script>
-    <script src="../js/auth.js"></script>
-    <script>
-        if (!Auth.requireRole('PARENT')) {
+    <script type="module" src="../js/config.js"></script>
+    <script type="module" src="../js/api.js"></script>
+    <script type="module" src="../js/auth.js"></script>
+    <script type="module">
+        import {requireRole} from '../js/auth.js';
+        if (!requireRole('PARENT')) {
             throw new Error('Access denied - parent only');
         }
     </script>
-    <script>
+    <script type="module">
+        import { isAuthenticated, getCurrentUser, requireRole, logout } from '../js/auth.js';
         console.log('[Init] Starting parent dashboard...');
         
-        Auth.requireRole('PARENT');
+        requireRole('PARENT');
         document.getElementById('app-body').style.display = 'block';
         
-        const user = Auth.getCurrentUser();
+        const user = getCurrentUser();
         document.getElementById('userName').textContent = user.username || 'Parent';
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
-            Auth.logout();
+            logout();
         });
 
         document.querySelectorAll('.nav-link').forEach(link => {
