--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -93,22 +93,24 @@
         </div>
     </div>
 
-    <script src="../js/config.js"></script>
-    <script src="../js/api.js"></script>
-    <script src="../js/auth.js"></script>
-    <script>
-        if (!Auth.requireRole('SPECIALIST')) {
+    <script type="module" src="../js/config.js"></script>
+    <script type="module" src="../js/api.js"></script>
+    <script type="module" src="../js/auth.js"></script>
+    <script type="module">
+        import {requireRole} from '../js/auth.js';
+        if (!requireRole('SPECIALIST')) {
             throw new Error('Access denied - specialist only');
         }
     </script>
-    <script>
-        Auth.requireRole('SPECIALIST');
+    <script type="module">
+        import { isAuthenticated, getCurrentUser, requireRole, logout } from '../js/auth.js';
+        requireRole('SPECIALIST');
         document.getElementById('app-body').style.display = 'block';
-        const user = Auth.getCurrentUser();
+        const user = getCurrentUser();
         document.getElementById('userName').textContent = user.username || 'Specialist';
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
-            Auth.logout();
+            logout();
         });
 
         // Handle sidebar navigation
