--- a/pages/teacher.html
+++ b/pages/teacher.html
@@ -98,22 +98,24 @@
         </div>
     </div>
 
-    <script src="../js/config.js"></script>
-    <script src="../js/api.js"></script>
-    <script src="../js/auth.js"></script>
-    <script>
-        if (!Auth.requireRole('TEACHER')) {
+    <script type="module" src="../js/config.js"></script>
+    <script type="module" src="../js/api.js"></script>
+    <script type="module" src="../js/auth.js"></script>
+    <script type="module">
+        import {requireRole} from '../js/auth.js';
+        if (!requireRole('TEACHER')) {
             throw new Error('Access denied - teacher only');
         }
     </script>
-    <script>
-        Auth.requireRole('TEACHER');
+    <script type="module">
+        import { isAuthenticated, getCurrentUser, requireRole, logout } from '../js/auth.js';
+        requireRole('TEACHER');
         document.getElementById('app-body').style.display = 'block';
-        const user = Auth.getCurrentUser();
+        const user = getCurrentUser();
         document.getElementById('userName').textContent = user.username || 'Teacher';
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
-            Auth.logout();
+            logout();
         });
 
         document.querySelectorAll('.nav-link').forEach(link => {
