--- a/pages/admin.html
+++ b/pages/admin.html
@@ -125,22 +125,24 @@
         </div>
     </div>
 
-    <script src="../js/config.js"></script>
-    <script src="../js/api.js"></script>
-    <script src="../js/auth.js"></script>
-    <script>
-        if (!Auth.requireRole('ADMIN')) {
+    <script type="module" src="../js/config.js"></script>
+    <script type="module" src="../js/api.js"></script>
+    <script type="module" src="../js/auth.js"></script>
+    <script type="module">
+        import {requireRole} from '../js/auth.js';
+        if (!requireRole('ADMIN')) {
             throw new Error('Access denied - admin only');
         }
     </script>
-    <script>
-        Auth.requireRole('ADMIN');
+    <script type="module">
+        import {requireRole, getCurrentUser, logout} from '../js/auth.js';
+        requireRole('ADMIN');
         document.getElementById('app-body').style.display = 'block';
-        const user = Auth.getCurrentUser();
+        const user = getCurrentUser();
         document.getElementById('userName').textContent = user.username || 'Admin';
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
-            Auth.logout();
+            logout();
         });
 
         document.querySelectorAll('.nav-link').forEach(link => {
